Bug#41521 and Bug#41564. Sometimes a call to  Thread::sleep(timeout, callersMutex) from SyncObject::wait() can wakeup before the lock has been granted.  If it does this, the code was taking the thread off the SyncObject queue and then calling the sleep again. This time, the lock cannot be granted because the lock owner does not signal the waiting thread.  It is not queued. A lock wait timeout will then occur. The thread should only be taken off the queue if a lock wait timeout really does occur.